# lib_game_detector

./: .gitignore  Cargo.toml  README.md  README.tpl  bacon.toml  justfile  rustfmt.toml
.github/workflows/: check.yml
benches/: bench.rs  criterion.rs  divan.rs
examples/: 01_basic.rs  02_list_all_detected_games.rs  03_env_logger.rs  04_list_detected_game_directories.rs  05_games_with_icons.rs  06_serialize_games_to_json.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
src/: data.rs  error.rs  lib.rs  parsers.rs  utils.rs
src/linux/: mod.rs
src/linux/launchers/: bottles.rs  heroic_amazon.rs  heroic_epic.rs  heroic_gog.rs  itch.rs  lutris.rs  mod.rs  steam.rs
src/linux/launchers/heroic/: amazon.rs  epic.rs  gog.rs  heroic_amazon.rs  heroic_epic.rs  heroic_gog.rs  mod.rs  sideload.rs
src/linux/launchers/minecraft/: at.rs  mod.rs  prism.rs
src/linux/launchers/steam/: mod.rs  steam_base.rs  steam_shortcuts.rs
src/macros/: logs.rs
src/utils/: commands.rs  mod.rs  paths.rs  strings.rs
tests/: integration_test.rs
tests/file_system_mocks/linux/.cache/lutris/: game-paths.json
tests/file_system_mocks/linux/.config/heroic/store_cache/: legendary_library.json
tests/file_system_mocks/linux/.config/itch/db/: butler.db
tests/file_system_mocks/linux/.local/share/PrismLauncher/: prismlauncher.cfg
tests/file_system_mocks/linux/.local/share/PrismLauncher/instances/1.20.6/: instance.cfg
tests/file_system_mocks/linux/.local/share/Steam/steamapps/: libraryfolders.vdf
tests/file_system_mocks/linux/.local/share/atlauncher/instances/SkyFactory/: instance.json
tests/file_system_mocks/linux/.local/share/bottles/: library.yml
tests/file_system_mocks/linux/.local/share/bottles/bottles/gog/: bottle.yml
tests/file_system_mocks/linux/.local/share/lutris/: pga.db
tests/file_system_mocks/linux/.local/share/lutris/games/: gog-galaxy-windows-1688309836.yml
tests/file_system_mocks/linux/.var/app/com.atlauncher.ATLauncher/data/instances/FabulouslyOptimized/: instance.json
tests/file_system_mocks/linux/.var/app/com.heroicgameslauncher.hgl/config/heroic/gog_store/: installed.json
tests/file_system_mocks/linux/.var/app/com.heroicgameslauncher.hgl/config/heroic/sideload_apps/: library.json
tests/file_system_mocks/linux/.var/app/com.heroicgameslauncher.hgl/config/heroic/store_cache/: legendary_library.json  nile_library.json
tests/file_system_mocks/linux/.var/app/net.lutris.Lutris/cache/lutris/: game-paths.json
tests/file_system_mocks/linux/.var/app/net.lutris.Lutris/data/lutris/: pga.db
tests/file_system_mocks/linux/steam_libraries/1/steamapps/: appmanifest_1016920.acf  appmanifest_2073850.acf  appmanifest_2078450.acf  appmanifest_8930.acf
tests/file_system_mocks/linux/steam_libraries/2/steamapps/: appmanifest_105600.acf  appmanifest_1062090.acf  appmanifest_2767030.acf
tests/file_system_mocks/linux/steam_symlinks/.steam/: root
tests/file_system_mocks/linux/steam_symlinks/.steam/debian-installation/steamapps/: libraryfolders.vdf
(+10 files in other folders)
