[package]
name = "lib_game_detector"
version = "0.0.18"
edition = "2021"
description = "A Rust library for detecting and parsing data about games installed on the system"
readme = "README.md"
repository = "https://github.com/rolv-apneseth/lib_game_detector/"
license = "AGPL-3.0"
rust-version = "1.78.0"

[dependencies]
dirs = "6.0.0"
tracing = "0.1.40"
nom = "8.0.0"
cfg-if = "1.0.0"
itertools = "0.14.0"
thiserror = "2.0.3"
steam_shortcuts_util = "1.1.8"
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
divan = "0.1.14"
is-terminal = "0.4.16"
test-case = "3.3.1"
tracing-subscriber = { version = "0.3.*", features = ["env-filter"] }

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = false

[[bench]]
name = "divan"
path = "benches/divan.rs"
harness = false
