[package]
name = "lib_game_detector"
version = "0.0.23"
edition = "2021"
description = "A Rust library for detecting and parsing data about games installed on the system"
readme = "README.md"
repository = "https://github.com/rolv-apneseth/lib_game_detector/"
license = "AGPL-3.0"
rust-version = "1.80.0"

[dependencies]
dirs = "6.0"
tracing = "0.1"
nom = "8.0"
cfg-if = "1.0"
itertools = "0.14"
thiserror = "2.0"
steam_shortcuts_util = "1.1"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
divan = "0.1"
is-terminal = "0.4"
test-case = "3.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { version = "1.0" }

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = false

[[bench]]
name = "divan"
path = "benches/divan.rs"
harness = false
